--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,17 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.FoxCompat.Transparent" parent="Theme.FoxCompat">
+        <!-- <item name="backgroundColor">@color/transparent</item> -->
+        <item name="android:background">@color/transparent</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowShowWallpaper">true</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <!-- <item name="android:windowAnimationStyle">@android:style/Animation</item> -->
+    </style>
+
     <style name="Theme.FoxCompat.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.FoxCompat.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
